# trading-agent-hackathon

./: .env.example  .gitignore  README.md  pyproject.toml
trading_agent/adapters/: __init__.py  alpaca_broker.py  alpaca_market_data.py  news_provider.py  ticker_provider.py
trading_agent/agents/: __init__.py  decision_manager.py  executor.py  news_analyst.py  react_analyst.py  reflection.py  risk_manager.py  scout.py  technical_analyst.py
trading_agent/core/: __init__.py  actions.py  agent_reply.py  autonomous_selection.py  conditional_order_store.py  confidence_policy.py  confirmation_store.py  constraint_store.py  data_hygiene.py  entity_discovery.py  evidence.py  execution_policy.py  external_portfolio.py  human_input.py  human_instruction.py  human_intent.py  human_risk.py  instruction_ledger.py  llm_guardrails.py  models.py  news_query.py  portfolio.py  ports.py  rebalance.py  retry_policy.py  risk_policy.py  scheduled_action_store.py  sector_classifier.py  ticker_selection.py  ticker_symbols.py  ticker_universe.py  typed_outcomes.py  typed_resolver.py  web_search.py
trading_agent/journal/: __init__.py  dashboard.py  memory.py  run_manager.py  store.py  terminal.py
trading_agent/pipeline/: __init__.py  graph.py
trading_agent/scripts/: human_input.py  run_agent.py  test_connection.py
trading_agent/technicals/: __init__.py  indicators.py
trading_agent/tools/: __init__.py  context_tools.py
trading_agent/utils/: __init__.py  config.py  http.py  llm_clients.py  llm_metadata.py  logger.py  portfolio.py
