[project]
name = "trading-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["alpaca-py>=0.30", "python-dotenv>=1"]

[project.scripts]
test-connection = "trading_agent.scripts.test_connection:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true
