[project]
name = "trading-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.30",
    "beautifulsoup4>=4.12",
    "langchain>=1.1",
    "langchain-ollama>=1.0",
    "langchain-openai>=1.0.1",
    "langgraph>=0.2",
    "pydantic>=2",
    "python-dotenv>=1",
    "requests>=2.32",
]

[project.scripts]
trading-agent = "trading_agent.scripts.run_agent:main"
human-input = "trading_agent.scripts.human_input:main"
test-connection = "trading_agent.scripts.test_connection:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true
